--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,14 @@
     "categories": "Categories",   
     "search": "Enter value to search for...",
     "homePage": "Home Page",
-    "allCategories": "All Categories"
+    "shoppingCartPage": "My Shopping Cart",
+    "allCategories": "All Categories",
+    "addBookInShoppingCartIsSuccessful": "Adding books to the shopping cart was successful",
+    "noBooksInShoppingCart": "No book in shopping cart!",
+    "Bilim": "Science",
+    "remove": {
+        "doYouWantToDeleted": "Do you want to deleted?",
+        "cancelBtn": "Cancel",
+        "confirmBtn": "Remove"
+    }
 }
