--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -1,7 +1,54 @@
 {
     "categories": "Kategoriler",
-    "search": "Aranacak değer girin...",
-    "home": "Ana Sayfa",
+    "search": "Aranacak değer girin...",    
     "homePage": "Ana Sayfa",
-    "allCategories": "Tüm Kategoriler"
+    "shoppingCartPage": "Sepetim",
+    "allCategories": "Tüm Kategoriler",
+    "paymentIsSuccessful": "Ödeme işlemi başarıyla tamamlandı",
+    "addBookInShoppingCartIsSuccessful": "Kitap başarıyla sepete eklendi",
+    "noBooksInShoppingCart": "Sepette ürününüz bulunmuyor!",
+    "remove": {
+        "doYouWantToDeleted": "Silmek istiyor musunuz?",
+        "cancelBtn": "Vazgeç",
+        "confirmBtn": "Sil"
+    },
+    "payment": {
+        "title": "Ödeme Sayfası",  
+        "pay": "Ödeme Yap",
+        "completePaymentBtn": "Ödemeyi Tamamla",
+        "buyer": {
+            "title": "Alıcı Bilgileri",
+            "name": "Alıcı Adı",
+            "surname": "Alıcı Soyadı",
+            "identityNumber": "T.C. Numarası",
+            "email": "Mail Adresi",
+            "gsmNumber": "Telefon Numarası"
+        },
+        "address": "Adres Bilgileri",
+        "isSameAddress": "Teslim ve Fatura Adresi Aynı",
+        "shippingAddress": {
+            "title": "Teslim Adresi",
+            "country": "Ülke",
+            "city": "Şehir",
+            "zipCode": "Posta Kodu",
+            "contactName": "Teslim Alacak Kişi",
+            "description": "Açık Adresi"
+        },
+        "billingAddress": {
+            "title": "Fatura Adresi",
+            "country": "Ülke",
+            "city": "Şehir",
+            "zipCode": "Posta Kodu",
+            "contactName": "Teslim Alacak Kişi",
+            "description": "Açık Adresi"
+        },
+        "creditCart": {
+            "title": "Kredi Kartı Bilgileri",
+            "cardHolderName": "Kart Sahibinin Adı",
+            "cardNumber": "Kart Numarası",
+            "expireMonthAndYear": "Son Kul. Tarihi",
+            "cvc" : "CVC"
+        }
+    }
+    
 }
